- Application auto-detects old version and asks to overwrite content
  folder with own content folder.
- Kink / Fetish tags are sorted.

Fixed Bugs:
- Metronome not accepting null or empty string to reset beat sound was fixed.
- Fixed Metronome not clearing on stop.
- "Pause Player when app is not active" setting can now be actually toggled.
- Filtered Resource tree updates when a Resource is added or removed.
- Wildly jumping PlayerTextBox fixed.
- Fixed buttons in Player not accepting shortcuts and changing their text when
  new buttons are created.
- Fixed Sounds in PlayerMetronome not playing if the metronome was too fast.
- On reloading a Project in the Editor the tags will not show up multiple times.


================================================================================
Version 1.1.2.0
================================================================================

Fixed Bugs:
- Fixed the tutorial. It should not get stuck or make the highlights disappear now.
- Sped up loading times at startup a little.


================================================================================
Version 1.2.0.0
================================================================================

New Features:
- The use of PhysFS makes it possible to use archived files transparently and
  archives can be added as a new type of pseudo-Resource, which can contain
  multiple resources.
- Updated Node Editor with copy-paste functionality.
- Undo and Redo functionality implemented for the entire editor.
- Hotload for styles implemented for developping new application styles.

Changes:
- JOIP-Engine uses PhysFS to allow restricted acces to files only, making it
  impossible to write or read outside of the currently loaded project folder.
- Loading on startup is significantly faster because the logo loads in a
  worker thread.
- Changelog visible in the "About" menu.

Fixed Bugs:
- Default style is fixed. Qml and icons look no longer broken.