@@ -1,29 +1,36 @@
 #include "MetronomePaintedWidget.h"
+#include "Application.h"
+#include "Settings.h"
 #include "Systems/Resource.h"
+#include "Utils/MultiEmitterSoundPlayer.h"
 #include <QtAV>
 #include <QFileInfo>
 #include <QPainter>
 
 namespace  {
   const double c_dTickWidth = 5.0;
-  const qint32 c_iNumAutioEmitters = 5;
 }
 
 CMetronomeCanvasQml::CMetronomeCanvasQml(QQuickItem* pParent) :
   QQuickPaintedItem(pParent),
-  m_vspPlayers(),
+  m_spSoundEmitters(
+    std::make_unique<CMultiEmitterSoundPlayer>(CMultiEmitterSoundPlayer::c_iDefaultNumAutioEmitters,
+                                               ":/resources/sound/metronome_default.wav")),
+  m_spSettings(CApplication::Instance()->Settings()),
   m_sBeatResource(":/resources/sound/metronome_default.wav"),
   m_tickColor(Qt::white),
-  m_vdTickmap(),
-  m_iLastAutioPlayer(0),
-  m_bMuted(false)
+  m_vdTickmap()
 {
-  for (qint32 i = 0; c_iNumAutioEmitters > i; ++i)
+  if (nullptr != m_spSettings)
   {
-    m_vspPlayers.push_back(std::make_unique<QtAV::AVPlayer>());
-    m_vspPlayers.back()->setRepeat(0);
-    m_vspPlayers.back()->setFile(m_sBeatResource);
+    connect(m_spSettings.get(), &CSettings::mutedChanged,
+            this, &CMetronomeCanvasQml::SlotMutedChanged, Qt::QueuedConnection);
+    connect(m_spSettings.get(), &CSettings::volumeChanged,
+            this, &CMetronomeCanvasQml::SlotVolumeChanged, Qt::QueuedConnection);
   }
+
+  SlotMutedChanged();
+  SlotVolumeChanged();
 }
 
 CMetronomeCanvasQml::~CMetronomeCanvasQml()
@@ -55,27 +62,25 @@ void CMetronomeCanvasQml::paint(QPainter* pPainter)
 //
 const QString& CMetronomeCanvasQml::BeatResource() const
 {
-  return m_sBeatResource;
+  return m_spSoundEmitters->SoundEffect();
 }
 
 //----------------------------------------------------------------------------------------
 //
 void CMetronomeCanvasQml::SetBeatResource(const QString& sResource)
 {
-  if (m_sBeatResource != sResource && (sResource.isEmpty() || QFileInfo(m_sBeatResource).exists()))
+  const QString sOldResource = m_spSoundEmitters->SoundEffect();
+  if (sResource.isEmpty())
   {
-    if (sResource.isEmpty())
-    {
-      m_sBeatResource = ":/resources/sound/metronome_default.wav";
-    }
-    else
-    {
-      m_sBeatResource = sResource;
-    }
-    for (qint32 i = 0; static_cast<qint32>(m_vspPlayers.size()) > i; ++i)
-    {
-      m_vspPlayers[i]->setFile(m_sBeatResource);
-    }
+    m_spSoundEmitters->SetSoundEffect(":/resources/sound/metronome_default.wav");
+  }
+  else
+  {
+    m_spSoundEmitters->SetSoundEffect(sResource);
+  }
+
+  if (sOldResource != m_spSoundEmitters->SoundEffect())
+  {
     emit beatResourceChanged();
   }
 }
@@ -94,16 +99,8 @@ void CMetronomeCanvasQml::SetMuted(bool bMuted)
   if (m_bMuted != bMuted)
   {
     m_bMuted = bMuted;
-    if (m_bMuted)
-    {
-      for (qint32 i = 0; static_cast<qint32>(m_vspPlayers.size()) > i; ++i)
-      {
-        if (m_vspPlayers[i]->isPlaying())
-        {
-          m_vspPlayers[i]->stop();
-        }
-      }
-    }
+    SlotMutedChanged();
+    emit mutedChanged();
   }
 }
 
@@ -130,13 +127,7 @@ void CMetronomeCanvasQml::SetTickColor(const QColor& color)
 void CMetronomeCanvasQml::clear()
 {
   m_vdTickmap.clear();
-  for (qint32 i = 0; static_cast<qint32>(m_vspPlayers.size()) > i; ++i)
-  {
-    if (m_vspPlayers[i]->isPlaying())
-    {
-      m_vspPlayers[i]->stop();
-    }
-  }
+  m_spSoundEmitters->Stop();
 }
 
 //----------------------------------------------------------------------------------------
@@ -159,24 +150,7 @@ void CMetronomeCanvasQml::update(double dIntervalMs)
       *it = 1.0;
       it = m_vdTickmap.erase(it);
 
-      if (!m_bMuted)
-      {
-        // play sound
-        if (-1 < m_iLastAutioPlayer && static_cast<qint32>(m_vspPlayers.size()) > m_iLastAutioPlayer)
-        {
-          if (m_vspPlayers[m_iLastAutioPlayer]->isPlaying())
-          {
-            m_vspPlayers[m_iLastAutioPlayer]->stop();
-          }
-          m_vspPlayers[m_iLastAutioPlayer]->play();
-        }
-
-        // next audio player
-        if (static_cast<qint32>(m_vspPlayers.size()) <= ++m_iLastAutioPlayer)
-        {
-          m_iLastAutioPlayer = 0;
-        }
-      }
+      m_spSoundEmitters->Play();
 
       emit tickReachedCenter();
     }
@@ -187,4 +161,24 @@ void CMetronomeCanvasQml::update(double dIntervalMs)
   }
 
   QQuickPaintedItem::update();
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CMetronomeCanvasQml::SlotMutedChanged()
+{
+  if (nullptr != m_spSettings)
+  {
+    m_spSoundEmitters->SetMuted(m_bMuted || m_spSettings->Muted());
+  }
+}
+
+//----------------------------------------------------------------------------------------
+//
+void CMetronomeCanvasQml::SlotVolumeChanged()
+{
+  if (nullptr != m_spSettings)
+  {
+    m_spSoundEmitters->SetVolume(m_spSettings->Volume());
+  }
 }
