@@ -127,3 +127,5 @@ Changes:
 
 Fixed Bugs:
 - Default style is fixed. Qml and icons look no longer broken.
+- Application sounds don't cut off when a new sound effect starts playing.
+- Metronome honors application settings (muted and volume).
